fix mat button overlap

--- a/apps/fe-mat/src/app/remote-entry/home/home.component.scss
+++ b/apps/fe-mat/src/app/remote-entry/home/home.component.scss
@@ -3,7 +3,6 @@
 
 .container {
   position: relative;
-  padding: 1rem;
 }
 
 mat-grid-tile {
