--- a/apps/fe-mat/src/app/remote-entry/remote-entry.component.scss
+++ b/apps/fe-mat/src/app/remote-entry/remote-entry.component.scss
@@ -21,6 +21,10 @@
   font-family: Roboto, 'Helvetica Neue', sans-serif;
 }
 
+.entry-container {
+  position: relative;
+}
+
 mat-drawer-container {
   position: relative;
   min-height: 100vh;
@@ -36,6 +40,7 @@ mat-drawer-container {
   min-height: 100%;
   justify-content: center;
   flex-wrap: wrap;
+  margin-top: 1rem;
 
   & > * {
     width: 100%;
@@ -44,6 +49,8 @@ mat-drawer-container {
 
 .sr-sidenav-toggle-btn {
   position: absolute !important;
+  top: 0;
+  z-index: 2;
 }
 
 .sr-home-header {
